--- a/applications/modules/seo/languages/lang.ja_JP.ini
+++ b/applications/modules/seo/languages/lang.ja_JP.ini
@@ -18,154 +18,154 @@
 ; ==============================================================================
 
 [about]
-about_seo_description = "SEO utilities"
+about_seo_description = "SEOユーティリティ"
 breadcump = "SEO"
-task_ganalytic = "Google Analytic Report"
-task_gwebmaster = "Google Web Master tool"
-task_sitemap = "Sitemap builder"
-task_toolkit = "SEO Toolkit"
-permission_ganalytic = "Google Analytic reports"
-permission_ganalytic_view = "View reports"
-permission_gwebmaster = "Google Web Master tool"
-permission_gwebmaster_add_site = "Add site"
-permission_gwebmaster_add_sitemap = "Add sitemap"
-permission_gwebmaster_delete = "Delete site"
-permission_gwebmaster_delete_sitemap = "Delete sitemap"
-permission_gwebmaster_details = "View site details"
-permission_gwebmaster_list = "List of sites"
-permission_gwebmaster_verify = "Verify site"
-permission_sitemap_add = "Add new link to sitemap"
-permission_sitemap_delete = "Remove link from sitemap"
-permission_sitemap_index = "View sitemap details"
-permission_toolkit = "SEO Toolkit"
-permission_toolkit_index = "Get backlinks, indexed pages, rank"
+task_ganalytic = "Googleアナリティクスレポート"
+task_gwebmaster = "Googleウェブマスターツール"
+task_sitemap = "サイトマップビルダー"
+task_toolkit = "SEOツールキット"
+permission_ganalytic = "Googleアナリティクスレポート"
+permission_ganalytic_view = "レポートの表示"
+permission_gwebmaster = "Googleウェブマスターツール"
+permission_gwebmaster_add_site = "サイトの追加"
+permission_gwebmaster_add_sitemap = "サイトマップの追加"
+permission_gwebmaster_delete = "サイトの削除"
+permission_gwebmaster_delete_sitemap = "サイトマップの削除"
+permission_gwebmaster_details = "サイトの詳細を表示"
+permission_gwebmaster_list = "サイト一覧"
+permission_gwebmaster_verify = "サイト認証"
+permission_sitemap_add = "サイトマップの追加"
+permission_sitemap_delete = "サイトマップの削除"
+permission_sitemap_index = "サイトマップの詳細を表示"
+permission_toolkit = "SEOツールキット"
+permission_toolkit_index = "バックリンク・インデックスページ・ページランクの取得"
 
 [ganalytic]
-ganalytic_page_title = "View Google Analytic report"
-ganalytic_breadcrumb = "Google Analytic Report"
-ganalytic_select_site = "Select the website:"
-ganalytic_view_report_for = "View report for:"
-ganalytic_report_one_day = "1 day"
-ganalytic_report_one_week = "1 week"
-ganalytic_report_one_month = "1 month"
-ganalytic_report_three_months = "3 months"
-ganalytic_report_six_months = "6 months"
-ganalytic_visitors = "Visitor"
-ganalytic_visits = "Visits"
-ganalytic_unique_visitors = "Unique Visitor"
-ganalytic_page_views = "Page Views"
-ganalytic_time_on_site = "Time on Site"
-ganalytic_bounce_rate = "Bounce Rate"
-ganalytic_browser = "Browser"
-ganalytic_operating_system = "Operating System"
-ganalytic_screen_resolution = "Screen Resolution"
-ganalytic_source = "Traffic Source"
-ganalytic_keyword = "Keywords"
-ganalytic_content = "Content"
-ganalytic_top_pages = "Top Viewed Pages"
-ganalytic_top_exit_pages = "Top Exit Pages"
-ganalytic_show_report_guide = "You can move over the mouse to the points of chart to show the data"
-ganalytic_visits_tooltip = "Date: %s<br />%s visits"
-ganalytic_unique_visitors_tooltip = "Date: %s<br />%s unique visitors"
-ganalytic_page_views_tooltip = "Date: %s<br />%s pageviews"
-ganalytic_time_on_site_tooltip = "Date: %s<br />Time on site: %s"
-ganalytic_bounce_rate_tooltip = "Date: %s<br />Bounce rate: %s%"
-ganalytic_browser_tooltip = "%s browser<br />%s visits"
-ganalytic_operating_system_tooltip = "%s operating system<br />%s visits"
-ganalytic_screen_resolution_tooltip = "%s screen resolution<br />%s visits"
-ganalytic_source_tooltip = "Source: %s<br />%s visits"
-ganalytic_keyword_tooltip = "Keyword: %s<br />%s visits"
-ganalytic_top_pages_tooltip = "Top viewed pages: %s<br />%s visits"
-ganalytic_top_exit_pages_tooltip = "Top exit pages: %s<br />%s visits"
+ganalytic_page_title = "Googleアナリティクスレポートの表示"
+ganalytic_breadcrumb = "Googleアナリティクスレポート"
+ganalytic_select_site = "ウェブサイトの選択:"
+ganalytic_view_report_for = "レポートを表示:"
+ganalytic_report_one_day = "1日"
+ganalytic_report_one_week = "1週間"
+ganalytic_report_one_month = "1ヶ月"
+ganalytic_report_three_months = "3ヶ月"
+ganalytic_report_six_months = "6ヶ月"
+ganalytic_visitors = "訪問者数"
+ganalytic_visits = "訪問数"
+ganalytic_unique_visitors = "ユニーク訪問者"
+ganalytic_page_views = "ページビュー"
+ganalytic_time_on_site = "サイト滞在時間"
+ganalytic_bounce_rate = "直帰率"
+ganalytic_browser = "ブラウザー"
+ganalytic_operating_system = "OS"
+ganalytic_screen_resolution = "画面解像度"
+ganalytic_source = "オラフィックソース"
+ganalytic_keyword = "キーワード"
+ganalytic_content = "コンテンツ"
+ganalytic_top_pages = "上位表示ページ"
+ganalytic_top_exit_pages = "上位離脱ページ"
+ganalytic_show_report_guide = "グラフじょうの点にマウスを乗せるとデータを見ることができます"
+ganalytic_visits_tooltip = "日付: %s<br />%s アクセス"
+ganalytic_unique_visitors_tooltip = "日付: %s<br />%s ユニーク訪問者"
+ganalytic_page_views_tooltip = "日付: %s<br />%s ページビュー"
+ganalytic_time_on_site_tooltip = "日付: %s<br />サイト滞在時間: %s"
+ganalytic_bounce_rate_tooltip = "日付: %s<br />直帰率: %s%"
+ganalytic_browser_tooltip = "%s ブラウザ<br />%s アクセス"
+ganalytic_operating_system_tooltip = "%s OS<br />%s アクセス"
+ganalytic_screen_resolution_tooltip = "%s 画面解像度<br />%s アクセス"
+ganalytic_source_tooltip = "ソース: %s<br />%s アクセス"
+ganalytic_keyword_tooltip = "キーワード: %s<br />%s アクセス"
+ganalytic_top_pages_tooltip = "上位表示ページ: %s<br />%s アクセス"
+ganalytic_top_exit_pages_tooltip = "上位離脱ページ: %s<br />%s アクセス"
 
 [gwebmaster]
-gwebmaster_list_page_title = "List sites"
-gwebmaster_list_breadcrumb = "List Sites"
-gwebmaster_list_not_found = "There are not sites"
-gwebmaster_list_guide = "Below is the list of sites:"
-gwebmaster_list_site = "Site"
-gwebmaster_list_verified = "Verified"
-gwebmaster_list_details_action = "Details"
-gwebmaster_list_delete_site_action = "Delete"
-gwebmaster_list_verified_yes = "Yes"
-gwebmaster_list_verified_no = "No"
-gwebmaster_list_add_site = "Add Site"
-gwebmaster_list_add_site_guide = "Enter the URL of the site in the following text box:"
-gwebmaster_list_add_site_button = "Add"
-gwebmaster_add_site_success = "The site has been added successfully."
-gwebmaster_add_site_fail = "Could not add the site."
-gwebmaster_details_page_title = "Site details"
-gwebmaster_details_breadcrumb = "Site Details"
-gwebmaster_details_guide = "You are viewing the data for <a href="%s">%s</a>"
-gwebmaster_details_sitemap = "Sitemap"
-gwebmaster_details_keyword = "Keyword"
-gwebmaster_details_verify = "Verify"
-gwebmaster_details_verify_guide = "This site has not been verified. Use one of the two following methods to verify your site:"
-gwebmaster_verify_success = "Your site has been verified successfully."
-gwebmaster_verify_fail = "Could not verify your site."
-gwebmaster_details_verify_method = "Verifying method"
-gwebmaster_details_verify_meta_tag_method = "Use meta tag"
-gwebmaster_details_verify_html_page_method = "Use HTML page"
-gwebmaster_details_verify_meta_tag = "Meta tag"
-gwebmaster_details_verify_html_file_name = "HTML file name"
-gwebmaster_details_verify_button = "Verify"
-gwebmaster_details_sitemap_not_found = "There are currently no sitemap."
-gwebmaster_details_add_sitemap = "Add new sitemap"
-gwebmaster_details_add_sitemap_button = "Add"
-gwebmaster_add_sitemap_success = "The sitemap has been added successfully."
-gwebmaster_add_sitemap_fail = "Could not add the sitemap."
-gwebmaster_details_sitemap_guide = "Below is the list of sitemap:"
-gwebmaster_details_sitemap_link = "Link"
-gwebmaster_details_sitemap_status = "Status"
-gwebmaster_details_sitemap_last_downloaded = "Last Downloaded"
+gwebmaster_list_page_title = "サイト一覧"
+gwebmaster_list_breadcrumb = "サイト一覧"
+gwebmaster_list_not_found = "登録されたサイトはありません"
+gwebmaster_list_guide = "サイト一覧は以下のとおりです:"
+gwebmaster_list_site = "サイト"
+gwebmaster_list_verified = "確認済み"
+gwebmaster_list_details_action = "詳細"
+gwebmaster_list_delete_site_action = "削除"
+gwebmaster_list_verified_yes = "はい"
+gwebmaster_list_verified_no = "いいえ"
+gwebmaster_list_add_site = "サイトを追加"
+gwebmaster_list_add_site_guide = "追加するサイトのURLを以下のテキストボックスに入力してください:"
+gwebmaster_list_add_site_button = "追加"
+gwebmaster_add_site_success = "サイトを追加しました。"
+gwebmaster_add_site_fail = "サイトを追加出来ませんでした。"
+gwebmaster_details_page_title = "サイトの詳細"
+gwebmaster_details_breadcrumb = "サイトの詳細"
+gwebmaster_details_guide = "<a href="%s">%s</a> のデータを表示"
+gwebmaster_details_sitemap = "サイトマップ"
+gwebmaster_details_keyword = "キーワード"
+gwebmaster_details_verify = "確認"
+gwebmaster_details_verify_guide = "このサイトは未認証です。サイトを確認するには以下の2つの方法で確認して下さい:"
+gwebmaster_verify_success = "サイトを認証しました。"
+gwebmaster_verify_fail = "サイトを認証出来ません。"
+gwebmaster_details_verify_method = "認証方式"
+gwebmaster_details_verify_meta_tag_method = "メタタグを利用"
+gwebmaster_details_verify_html_page_method = "HTMLページに記述"
+gwebmaster_details_verify_meta_tag = "メタタグを利用"
+gwebmaster_details_verify_html_file_name = "HTMLファイル名"
+gwebmaster_details_verify_button = "認証"
+gwebmaster_details_sitemap_not_found = "サイトマップはありません。"
+gwebmaster_details_add_sitemap = "サイトマップを追加"
+gwebmaster_details_add_sitemap_button = "追加"
+gwebmaster_add_sitemap_success = "サイトマップを追加しました。"
+gwebmaster_add_sitemap_fail = "サイトマップを追加出来ませんでした。"
+gwebmaster_details_sitemap_guide = "サイトマップ一覧は以下のとおりです:"
+gwebmaster_details_sitemap_link = "リンク"
+gwebmaster_details_sitemap_status = "ステータス"
+gwebmaster_details_sitemap_last_downloaded = "最終ダウンロード"
 gwebmaster_details_sitemap_num_urls = "Num. URLs"
-gwebmaster_details_delete_sitemap_action = "Delete"
-gwebmaster_details_keyword_not_found = "There are currently no keywords."
-gwebmaster_details_keyword_guide = "Below is the list of keywords Google found on your site:"
-gwebmaster_details_all_keywords = "All"
-gwebmaster_details_external_keywords = "External"
-gwebmaster_details_internal_keywords = "Internal"
+gwebmaster_details_delete_sitemap_action = "削除"
+gwebmaster_details_keyword_not_found = "キーワードはありません。"
+gwebmaster_details_keyword_guide = "Googleで検索されたキーワード一覧は以下のとおりです:"
+gwebmaster_details_all_keywords = "全て"
+gwebmaster_details_external_keywords = "外部"
+gwebmaster_details_internal_keywords = "内部"
 
 [sitemap]
-sitemap_index_page_title = "Sitemap management"
-sitemap_index_breadcrumb = "Sitemap"
+sitemap_index_page_title = "サイトマップ管理"
+sitemap_index_breadcrumb = "サイトマップ"
 sitemap_url = "URL"
-sitemap_link_provider_guide = "You can use the Links Provider to input the URL quickly"
-sitemap_language = "Language"
-sitemap_frequency = "Frequency"
-sitemap_frequency_always = "Always"
-sitemap_frequency_hourly = "Hourly"
-sitemap_frequency_daily = "Daily"
-sitemap_frequency_monthly = "Monthly"
-sitemap_frequency_yearly = "Yearly"
-sitemap_frequency_never = "Never"
-sitemap_priority = "Priority"
-sitemap_index_not_found = "The website does not have sitemap."
-sitemap_index_guide = "Below is the list of links taken from sitemap:"
-sitemap_index_view_list = "List"
-sitemap_index_view_text = "Text"
-sitemap_index_more_infomation = "More Infomation"
-sitemap_index_last_modified_at = "Last modified at %s"
-sitemap_index_submit_button = "Delete selected"
-sitemap_delete_success = "The link has been remove from sitemap successfully."
-sitemap_add_breadcrumb = "Add link"
-sitemap_add_page_title = "Add new link to sitemap"
-sitemap_add_submit_button = "Add"
-sitemap_add_success = "The link has been added to sitemap successfully."
+sitemap_link_provider_guide = "リンクプロバイダを利用することで、URLを素早く入力することが出来ます。"
+sitemap_language = "言語"
+sitemap_frequency = "周波数"
+sitemap_frequency_always = "常に"
+sitemap_frequency_hourly = "時間別"
+sitemap_frequency_daily = "日別"
+sitemap_frequency_monthly = "月別"
+sitemap_frequency_yearly = "年別"
+sitemap_frequency_never = "無し"
+sitemap_priority = "優先度"
+sitemap_index_not_found = "ウェブサイトのサイトマップは見つかりませんでした。"
+sitemap_index_guide = "サイトマップから取得したリンクは以下のとおりです:"
+sitemap_index_view_list = "リスト"
+sitemap_index_view_text = "テキスト"
+sitemap_index_more_infomation = "詳細情報"
+sitemap_index_last_modified_at = "最終更新日 %s"
+sitemap_index_submit_button = "選択したものを削除"
+sitemap_delete_success = "サイトマップからリンクを削除しました。"
+sitemap_add_breadcrumb = "リンクを追加"
+sitemap_add_page_title = "サイトマップにリンクを追加"
+sitemap_add_submit_button = "追加"
+sitemap_add_success = "サイトマップにリンクを追加しました。"
 
 [toolkit]
-toolkit_index_page_title = "SEO Toolkit"
-toolkit_index_breadcrumb = "Toolkit"
-toolkit_index_guide = "Enter the URL of website in the following text box to get its information:"
+toolkit_index_page_title = "SEOツールキット"
+toolkit_index_breadcrumb = "ツールキット"
+toolkit_index_guide = "ウェブサイトのURLを以下のテキストボックスに入力し詳細情報を取得してください:"
 toolkit_index_url = "URL"
-toolkit_index_analyzer_button = "Analyzer"
-toolkit_index_page_indexed = "Page Indexed"
-toolkit_index_back_links = "Back Links"
+toolkit_index_analyzer_button = "アナライザ"
+toolkit_index_page_indexed = "ページインデックス"
+toolkit_index_back_links = "バックリンク"
 toolkit_index_google = "Google"
 toolkit_index_yahoo = "Yahoo"
 toolkit_index_bing = "Bing"
 toolkit_index_rank = "Rank"
-toolkit_index_google_rank = "Google Pagerank: %s"
-toolkit_index_google_rank_error = "Could not retrieve Google page rank"
-toolkit_index_alexa_rank = "Alexa rank: %s"
-toolkit_index_alexa_rank_error = "Could not retrieve Alexa rank"
+toolkit_index_google_rank = "Googleページランク: %s"
+toolkit_index_google_rank_error = "Googleページランクを取得出来ませんでした。"
+toolkit_index_alexa_rank = "Alexaランク: %s"
+toolkit_index_alexa_rank_error = "Alexaランクを取得出来ませんでした。"
