fix double quotesion fix.

--- a/applications/modules/core/languages/lang.ja_JP.ini
+++ b/applications/modules/core/languages/lang.ja_JP.ini
@@ -345,7 +345,7 @@ install_complete_go_to_frontend = "ウェブサイトへ"
 install_complete_go_to_backtend = "管理ページへ"
 
 [language]
-language_add_successful = "言語ファイルの追加が完了しました。
+language_add_successful = "言語ファイルの追加が完了しました。"
 language_edit_section = "グループ"
 language_edit_page_title = "言語の編集"
 language_edit_top_guide = "モジュール の <b>%s</b> を編集中 言語ファイル <b>%s</b>:"
