translate english to japanese.

--- a/applications/modules/category/languages/lang.ja_JP.ini
+++ b/applications/modules/category/languages/lang.ja_JP.ini
@@ -36,9 +36,9 @@ category_list_breadcrumb = "カテゴリー一覧"
 category_add_breadcrumb = "カテゴリーの追加"
 category_edit_breadcrumb = "カテゴリーの編集"
 category_edit_include_child_category = "小カテゴリーを含む"
-category_add_guide = "Enter the category information to form:"
-category_add_success = "カテゴリーの追加が完了しました。"
-category_edit_success = "カテゴリーの更新が完了しました。"
+category_add_guide = "追加するカテゴリーの情報を入力してください:"
+category_add_success = "カテゴリーを追加しました。"
+category_edit_success = "カテゴリーを更新しました。"
 category_id = "ID"
 category_name = "カテゴリー名"
 category_slug = "カテゴリースラッグ"
@@ -47,16 +47,16 @@ category_language = "言語"
 category_source_item = "ソースカテゴリ"
 category_parent = "親カテゴリ"
 category_add_save_button = "保存"
-category_name_required = "カテゴリー名は必須項目です"
+category_name_required = "カテゴリー名を入力してください"
 category_name_maxlength = "カテゴリー名は255文字以内で入力してください"
-category_slug_required = "カテゴリースラッグは必須項目です"
-category_slug_maxlength = "カテゴリースラッグは255文字以内で入力してください"
-category_slug_validate = "カテゴリースラッグが正しくありません"
+category_slug_required = "スラッグを入力してください"
+category_slug_maxlength = "スラッグは255文字以内で入力してください"
+category_slug_validate = "スラッグが正しくありません"
 category_list_not_found = "カテゴリーは見つかりませんでした。"
 category_list_action_edit = "編集"
 category_list_action_delete = "削除"
 category_list_action_delete_confirm = "選択したカテゴリーを削除しますか？"
-category_list_guide = "Below is the list of categories:"
+category_list_guide = "登録済みカテゴリーは以下のとおりです:"
 category_list_save_button = "オーダーの保存"
 category_list_order_success = "オーダーの更新が完了しました。"
 
