--- a/applications/modules/comment/languages/lang.ja_JP.ini
+++ b/applications/modules/comment/languages/lang.ja_JP.ini
@@ -32,7 +32,7 @@ permission_comment_thread = "スレッドでコメントを表示"
 comment_list_page_title = "コメント管理"
 comment_list_breadcrumb = "コメント"
 comment_add_breadcrumb = "コメントの追加"
-comment_list_guide = "Below is the list of comments:"
+comment_list_guide = "コメントは以下のとおりです:"
 comment_title = "タイトル"
 comment_title_default = "コメントタイトル"
 comment_status = "ステータス"
