--- a/applications/modules/menu/languages/lang.ja_JP.ini
+++ b/applications/modules/menu/languages/lang.ja_JP.ini
@@ -22,7 +22,7 @@ about_menu_description = "メニュー管理"
 task_list_menus = "メニュー一覧"
 task_build_menu = "新規メニュー構築"
 permission_menu = "メニュー管理"
-permission_menu_list = "メニュー一覧ｎ"
+permission_menu_list = "メニュー一覧"
 permission_menu_build = "新規メニュー構築"
 permission_menu_edit = "メニューの編集"
 permission_menu_delete = "メニューの削除"
