--- a/applications/modules/multimedia/languages/lang.ja_JP.ini
+++ b/applications/modules/multimedia/languages/lang.ja_JP.ini
@@ -18,26 +18,26 @@
 ; ==============================================================================
 
 [about]
-about_multimedia_description = "マルチメディアファイル管理"
+about_multimedia_description = "マルチメディア管理"
 task_list_files = "ファイル一覧"
 task_upload_photos = "新規画像アップロード"
-task_list_sets = "List sets"
-task_list_notes = "List notes" 
+task_list_sets = "セット一覧"
+task_list_notes = "ノート一覧" 
 permission_photo = "写真管理"
 permission_photo_upload = "新規写真アップロード"
 permission_set = "Manage sets"
 permission_set_add = "新規セット"
-permission_set_edit = "Edit given set"
+permission_set_edit = "追加済みのセットを編集"
 permission_set_delete = "セットの削除"
 permission_set_activate = "セットの有効化"
 permission_file = "ファイル管理"
 permission_file_add = "新規ファイル"
-permission_file_edit = "Edit given file"
+permission_file_edit = "追加済みのファイルを編集"
 permission_file_delete = "ファイルの削除"
 permission_file_activate = "ファイルの有効化"
 permission_note = "ノート管理"
 permission_note_list = "ノートリスト"
-permission_note_edit = "Edit given note"
+permission_note_edit = "追加済みのノートを編集"
 permission_note_delete = "ノートの削除"
 permission_note_activate = "ノートの有効化"
 permission_file_editor = "画像エディタ"
@@ -54,7 +54,7 @@ file_list_page_title = "ファイル管理"
 file_list_guide = "最新の一覧は以下のとおりです。フォームを利用して検索することも可能です。"
 file_list_search_keyword = "タイトル"
 file_list_search_id = "ID"
-file_list_search_my_files = "Search in my files only"
+file_list_search_my_files = "作成したファイルから検索"
 file_list_action_delete = "削除"
 file_list_search_button = "検索"
 file_list_action_edit = "編集"
@@ -117,10 +117,10 @@ file_image_action_flip_horizontal = "水平に回転"
 file_image_current_size = "現在の大きさ"
 
 [note]
-note_available = "This photo has notes. Move your mouse over the rectangle area to show the note. You can add your note, but all notes have to be approved by administrator."
+note_available = "この写真にはノートがあります。Move your mouse over the rectangle area to show the note. ノートを追加することはできますが、管理者からの認証が必要です。"
 note_show_all = "全てのノートを表示"
 note_hide_all = "全てのノートを隠す"
-note_default_content = "Enter note content ..."
+note_default_content = "ノートの内容を入力..."
 note_updating = "ノートを更新中..."
 note_save_button = "保存"
 note_delete_button = "削除"
@@ -128,7 +128,7 @@ note_delete_confirm = "ノートを削除しますか？"
 note_list_page_title = "ノート一覧"
 note_list_breadcrumb = "ノート"
 note_list_not_found = "ノートはありません"
-note_list_description = "Below is the list of notes. You can click on image to view all its notes."
+note_list_description = "ノート一覧は以下のとおりです。すべてのノートに表示するには画像をクリックします。"
 note_content = "コンテンツ"
 note_created_date = "作成日"
 note_status = "ステータス"
@@ -144,9 +144,9 @@ note_list_deactivated_success = "ノートを無効化しました"
 
 [photo]
 photo_upload_page_title = "写真をアップロード"
-photo_upload_set = "セットをアップロード"
+photo_upload_set = "セットにアップロード"
 photo_upload_new_set = "または 新規セットを作成"
-photo_upload_guide = "You can select many images to upload at the same time. Support gif/jpg/jpeg/png formats. Size of image does not exceed 5MB."
+photo_upload_guide = "一度に複数の画像をアップロードすることができます。対応フォーマットは gif/jpg/jpeg/png で、アップロード可能サイズは 5MBまでです。"
 photo_upload_breadcrumb = "写真をアップロード"
 photo_upload_save_button = "保存"
 photo_upload_success = "写真をアップロードしました。"
@@ -210,7 +210,7 @@ set_edit_save_button = "保存"
 set_title = "タイトル"
 set_description = "説明"
 set_cover = "カバー"
-set_cover_guide = "You can select image that present for set by clicking on one of photos in set"
+set_cover_guide = "下のいずれかの画像をクリックすることでセットのカバーを設定することができます"
 set_cover_not_available = "画像が選択されていません"
 set_search_photo_keyword = "タイトル"
 set_search_my_photos = "マイセットから検索する"
