--- a/applications/modules/news/languages/lang.ja_JP.ini
+++ b/applications/modules/news/languages/lang.ja_JP.ini
@@ -48,7 +48,7 @@ article_details_posted_by = "投稿者 %s at %s"
 article_add_page_title = "新規記事"
 article_add_breadcrumb = "新規記事"
 article_add_details = "詳細"
-article_add_success = "きじのを追加しました。"
+article_add_success = "記事を追加しました。"
 article_list_activated_success = "記事を有効化しました。"
 article_list_deactivated_success = "記事を無効化しました。"
 article_sub_title = "サブタイトル"
